--- a/assets/css/pillar-1.css
+++ b/assets/css/pillar-1.css
@@ -10609,7 +10609,7 @@ a.theme-btn-on-bg:hover, a.theme-btn-on-bg:focus, a.theme-btn-on-bg:active, .the
 }
 
 .theme-progress-bar-dark {
-  background-color: #7d899b;
+  background-color: #434E5E;
 }
 
 .resume-wrapper {
